--- a/app/src/main/assets/bridgewebview_html_demo.html
+++ b/app/src/main/assets/bridgewebview_html_demo.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <meta content="text/html; charset=utf-8" http-equiv="content-type">
+    <script type="text/javascript" src="bridgewebview_js_demo"></script>
     <title>
         js调用java
     </title>
@@ -91,21 +92,7 @@
             document.getElementById("show").innerHTML = logContent;
         }
 
-        function connectWebViewJavascriptBridge(callback) {
-            if (window.WebViewJavascriptBridge) {
-                callback(WebViewJavascriptBridge)
-            } else {
-                document.addEventListener(
-                    'WebViewJavascriptBridgeReady'
-                    , function() {
-                        callback(WebViewJavascriptBridge)
-                    },
-                    false
-                );
-            }
-        }
-
-        connectWebViewJavascriptBridge(function(bridge) {
+        setupWebViewJavascriptBridge(function(bridge) {
             bridge.init(function(message, responseCallback) {
                 console.log('JS got a message', message);
                 var data = {
